# fin-agents

./: README.md
src/backend/: README.md  app.py  config.py  main.py  pyproject.toml  runtime_init.py
src/backend/agents/: ai.py  human.py  invoice.py  orchestrator.py  purchase_order.py  user.py
src/backend/context/: cosmos_memory.py  session_manager.py
src/backend/models/: messages.py
